--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
+    <table> border = "1">
         <tr>
             <th>no</th>
             <th>nama produk</th>
