--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <table> border = "1">
+    <table> border = "1"> width = "80%" height = "200px">
         <tr>
-            <th>no</th>
-            <th>nama produk</th>
-            <th>harga</th>
+            <th>width="10%">no</th>
+            <th>width="50%">nama produk</th>
+            <th>width="40%">harga</th>
         </tr>
         <tr>
             <td>1</td>
