--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <table> border = "1"> width = "80%" height = "200px">
         <tr>
-            <th>width="10%">no</th>
-            <th>width="50%">nama produk</th>
-            <th>width="40%">harga</th>
+            <th>style="background-color: hijau #caf50;">10%"no</th>
+            <th>style="font-size; 18px; text align:">nama produk</th>
+            <th>style ="font-weight: bold;">harga</th>
         </tr>
         <tr>
-            <td>1</td>
-            <td>mouse</td>
-            <td>100.000</td>
+            <td>style="text-align: center;">1</td>
+            <td>style="text-transprom: uppercase;">mouse</td>
+            <td>style="color: red;">100.000</td>
         </tr>
         <tr>
             <td>2</td>
