--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table> border = "1"> width = "80%" height = "200px">
+    <table> border = "1" style="border-collapse: collapse; width:100%;">
         <tr>
             <th>style="background-color: hijau #caf50;">10%"no</th>
             <th>style="font-size; 18px; text align:">nama produk</th>
