--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
     <table> border = "1" style="border-collapse: collapse; width:100%;">
         <tr>
-            <th>style="background-color: hijau #caf50;">10%"no</th>
-            <th>style="font-size; 18px; text align:">nama produk</th>
-            <th>style ="font-weight: bold;">harga</th>
+            <th>style="background-color: hijau #caf50; color: white; font-weight: bold; 
+                font-size: 18px; text align: center;">no</th>
+            <th>style="background-color: hijau #caf50; color: white; font-weight: bold;
+                font-size: 18px; text align: center;">nama produk</th>
+            <th>style ="background-color: hijau #caf50; color: white; font-weight: bold;
+                font-size: 18px; text align: center;">harga</th>
         </tr>
         <tr>
             <td>style="text-align: center;">1</td>
