--- a/index.html
+++ b/index.html
@@ -4,21 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style> table {
+    border-collapse:collapse; width:100%; border:1px solid black;}
+    th, td {padding: 10px;
+    border: 1px solid black;}
+    th {background-color: lawngreen;
+    color: aliceblue;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;}
+    td:nth-child(1) {text-align: center;}
+    td:nth-child(2){text-transform: uppercase;}
+    td:nth-child(3){color: red;}
+    </style>
 </head>
 <body>
-    <table> border = "1" style="border-collapse: collapse; width:100%;">
+    <table> 
         <tr>
-            <th>style="background-color: hijau #caf50; color: white; font-weight: bold; 
-                font-size: 18px; text align: center;">no</th>
-            <th>style="background-color: hijau #caf50; color: white; font-weight: bold;
-                font-size: 18px; text align: center;">nama produk</th>
-            <th>style ="background-color: hijau #caf50; color: white; font-weight: bold;
-                font-size: 18px; text align: center;">harga</th>
+            <th>no</th>
+            <th>nama produk</th>
+            <th>harga</th>
         </tr>
         <tr>
-            <td>style="text-align: center;">1</td>
-            <td>style="text-transprom: uppercase;">mouse</td>
-            <td>style="color: red;">100.000</td>
+            <td>1</td>
+            <td>mouse</td>
+            <td>100.000</td>
         </tr>
         <tr>
             <td>2</td>
